--- a/EcommerceApi/EcommerceApi/appsettings.json
+++ b/EcommerceApi/EcommerceApi/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "DbConnectionString": "Server=localhost;Port=5432;Database=ecommerce;User Id=postgres;Password=postgres;",
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
