--- a/EcommerceApi/compose.yaml
+++ b/EcommerceApi/compose.yaml
@@ -1,7 +1,14 @@
-﻿services:
-  ecommerceapi:
-    image: ecommerceapi
-    build:
-      context: .
-      dockerfile: EcommerceApi/Dockerfile
+﻿version: "3.9"
 
+services:
+  
+  
+  db:
+    image: postgres:latest
+    restart: always
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=ecommerce
+    ports:
+      - '5432:5432'
